--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,29 +4,31 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile    # Path to your Dockerfile
+      dockerfile: Dockerfile
     ports:
       - "8080:80"              # Map port 80 in the container to 8080 on the host
     volumes:
       - ./app:/var/www/html    # Mount the app directory for live updates
-      - ./vendor:/var/www/vendor
+      - ./vendor:/var/www/vendor # Include vendor if using Composer
     depends_on:
       - db                     # Ensure the database container starts first
+    environment:
+      APACHE_DOCUMENT_ROOT: /var/www/html # Ensure proper document root for Apache
+    restart: always
 
   db:
     image: mysql:5.7
     container_name: mysql
-    platform: linux/amd64  # Force x86_64 compatibility
+    platform: linux/amd64
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: php_project
     volumes:
-      - db_data:/var/lib/mysql # Persistent database storage
+      - db_data:/var/lib/mysql
+      - ./app/database/db.sql:/docker-entrypoint-initdb.d/db.sql
     ports:
       - "3307:3306"
 
-
-
 volumes:
-  db_data:                     # Define a named volume for MySQL data persistence
+  db_data:
