--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     command: --bind-address=0.0.0.0
     volumes:
       - db_vulnerable_data:/var/lib/mysql
-      - ./patched/database/db.sql:/docker-entrypoint-initdb.d/db.sql
+      - ./vulnerability/app/database/db.sql:/docker-entrypoint-initdb.d/db.sql
     networks:
       - app_network  # Ensure db_vulnerable is on the same network as the other services
     ports:
